[gd_scene load_steps=7 format=2]

[ext_resource path="res://Scenes/UI/MainMenuUI/SubmenuModules/Buttons/ItemButton.tscn" type="PackedScene" id=1]
[ext_resource path="res://Scenes/UI/MainMenuUI/SubmenuModules/Scrollbar.tscn" type="PackedScene" id=2]
[ext_resource path="res://Scenes/UI/MainMenuUI/SubmenuModules/InfoPanel.tscn" type="PackedScene" id=3]
[ext_resource path="res://Scenes/UI/MainMenuUI/SubmenuModules/Lists/EquipList.gd" type="Script" id=4]
[ext_resource path="res://Assets/UI/Menu/Menu_Backdrop_04.png" type="Texture" id=5]

[sub_resource type="Theme" id=1]

[node name="CanvasLayer" type="CanvasLayer"]
script = ExtResource( 4 )

[node name="TextureRect" type="TextureRect" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 7.94595
margin_top = 16.4217
margin_right = 7.94595
margin_bottom = 16.4217
texture = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ItemList" type="Control" parent="."]
anchor_left = 0.59365
anchor_top = 0.5
anchor_right = 0.59365
anchor_bottom = 0.5
margin_left = -108.968
margin_top = -69.0
margin_right = 109.032
margin_bottom = 89.0
__meta__ = {
"_edit_use_anchors_": true
}

[node name="VBoxContainer" type="VBoxContainer" parent="ItemList"]
anchor_left = 0.49
anchor_top = 0.07
anchor_right = 0.49
anchor_bottom = 0.07
margin_left = -14.82
margin_top = 0.94
margin_right = 100.18
margin_bottom = 98.94
custom_constants/separation = 17
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ItemButton" parent="ItemList/VBoxContainer" instance=ExtResource( 1 )]
margin_right = 114.0
theme = SubResource( 1 )

[node name="ItemButton2" parent="ItemList/VBoxContainer" instance=ExtResource( 1 )]
margin_top = 17.0
margin_right = 114.0
margin_bottom = 17.0
theme = SubResource( 1 )

[node name="InfoPanel" parent="ItemList" instance=ExtResource( 3 )]
anchor_left = 0.449798
anchor_top = 0.840396
anchor_right = 0.605761
anchor_bottom = 0.840396

[node name="Scrollbar" parent="ItemList" instance=ExtResource( 2 )]
anchor_left = 1.0
anchor_bottom = 0.0
margin_left = -220.205
margin_right = -2.20486
margin_bottom = 158.0
